gcc/testsuite/rust/rustc/ui/parser/issues/issue-86895_dg.rs
const pub () {}
// { dg-error "" "" { target *-*-* } .-1 }
pub fn main() {}

